--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-big-calendar": "^1.11.3",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-jwt": "^1.2.1",
     "react-router-dom": "^6.22.3",
